erros.txt
theboys.c: In function ‘main’:
theboys.c:154:9: error: ‘H’ may be used uninitialized [-Werror=maybe-uninitialized]
  154 |         fprio_retira(LEF, &ev, &prio, &t, H, B); //ev = 1º evento da lista de eventos futuros
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
theboys.c:139:21: note: ‘H’ was declared here
  139 |     struct heroi_t *H;
      |                     ^
theboys.c:154:9: error: ‘B’ may be used uninitialized [-Werror=maybe-uninitialized]
  154 |         fprio_retira(LEF, &ev, &prio, &t, H, B); //ev = 1º evento da lista de eventos futuros
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
theboys.c:140:20: note: ‘B’ was declared here
  140 |     struct base_t *B;
      |                    ^
cc1: all warnings being treated as errors
make: *** [<embutido>: theboys.o] Erro 1
